# sage

./: Cargo.toml  README.md  spec.md
docs/superpowers/plans/: 2026-05-31-phase-1-foundation.md
docs/superpowers/specs/: 2026-05-31-providers-redesign.md  2026-05-31-providers-screen-design.md  2026-06-01-workspace-redesign.md
src/: blob_store.rs  lib.rs  main.rs
src/agent/: action_graph.rs  checkpoint.rs  client.rs  editor.rs  executor.rs  mod.rs  orchestrator.rs  planner.rs  prompts.rs  reviewer.rs  tools.rs
src/ast/: mod.rs  parser.rs
src/codegraph/: context.rs  edges.rs  formatter.rs  graph.rs  language_parser.rs  mod.rs  ranker.rs  repo_map.rs  retrieval.rs
src/compress/: mod.rs  pruner.rs  summarize.rs
src/diff/: applicator.rs  format.rs  mod.rs  parser.rs
src/tui/: app.rs  events.rs  file_tree.rs  mod.rs  run.rs  ui.rs
tests/: codegraph_tests.rs  integration_tests.rs  orchestrator_tests.rs
