[package]
name = "sage"
version = "0.0.0-prealpha"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tempfile = "3.10"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
base64 = "0.22"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
